--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="hero">
+    <div class="hero hero__img">
         <header class="header">
             <img class="logo" src="./images/logo.svg" alt="Logo">
             <button class="open-menu" id="open-menu">
@@ -96,7 +96,7 @@
                 <i class="bi bi-pinterest"></i>
                 <i class="bi bi-instagram"></i>
             </div>
-            <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
+            <p class="copyright">© 2023 Difepor. All rights reserved.</p>
         </div>
     </footer>
         
