--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,7 @@
     <title>Construcciones Modulares</title>
     <script defer src="https://unpkg.com/alpinejs@3.2.3/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="main.css">
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
@@ -306,6 +306,102 @@
             <button class="btn btn-mobile">See all</button>
         </div>
     </main>
+
+    <!-- component -->
+<style>
+  /* RED BORDER ON INVALID INPUT */
+  .check input:invalid {
+      border-color: red;
+  }
+
+  /* FLOATING LABEL */
+  .label-floating input:not(:placeholder-shown),
+  .label-floating textarea:not(:placeholder-shown) {
+      padding-top: 1.4rem;
+  }
+  .label-floating input:not(:placeholder-shown) ~ label,
+  .label-floating textarea:not(:placeholder-shown) ~ label {
+      font-size: 0.8rem;
+      transition: all 0.2s ease-in-out;
+      color: #1f9d55;
+      opacity: 1;
+  }
+
+</style>
+<form id="contact-form" action="/send-email" method="POST" class="w-full mx-auto max-w-3xl bg-white shadow p-8 text-gray-700 mb-16">
+
+
+    <h2 class="w-full my-2 text-3xl font-bold leading-tight my-5">Contact form</h2>
+    <!-- name field -->
+    <div class="flex flex-wrap mb-6">
+        <div class="relative w-full appearance-none label-floating">
+            <input class="tracking-wide py-2 px-4 mb-3 leading-relaxed appearance-none block w-full bg-gray-200 border border-gray-200 rounded focus:outline-none focus:bg-white focus:border-gray-500"
+            id="name" type="text" name="nombre" placeholder="Your name"required>
+            <label for="name" class="absolute tracking-wide py-2 px-4 mb-4 opacity-0 leading-tight block top-0 left-0 cursor-text">
+                Your name
+            </label>
+        </div>
+    </div>
+    <!-- email field -->
+    <div class="flex flex-wrap mb-6">
+        <div class="relative w-full appearance-none label-floating">
+            <input class="tracking-wide py-2 px-4 mb-3 leading-relaxed appearance-none block w-full bg-gray-200 border border-gray-200 rounded focus:outline-none focus:bg-white focus:border-gray-500"
+            id="name" type="text" name="correo" placeholder="Your email"required>
+            <label for="name" class="absolute tracking-wide py-2 px-4 mb-4 opacity-0 leading-tight block top-0 left-0 cursor-text">
+                Your email
+            </label>
+        </div>
+    </div>
+    <!-- Message field -->
+    <div class="flex flex-wrap mb-6">
+        <div class="relative w-full appearance-none label-floating">
+            <textarea class="autoexpand tracking-wide py-2 px-4 mb-3 leading-relaxed appearance-none block w-full bg-gray-200 border border-gray-200 rounded focus:outline-none focus:bg-white focus:border-gray-500"
+                id="message" type="text" name="mensaje" placeholder="Message..."></textarea>
+                <label for="message" class="absolute tracking-wide py-2 px-4 mb-4 opacity-0 leading-tight block top-0 left-0 cursor-text">Message...
+            </label>
+        </div>
+    </div>
+
+    <div class="">
+        <button class="w-full shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded">
+            Send
+        </button>
+
+    </div>
+</form>
+
+
+<script>
+
+
+//RED BORDER ON INVALID INPUT
+document.getElementById('contact-me').addEventListener("invalid", function (event) {
+	this.classList.add('check');
+}, true);
+
+
+
+
+	// TEXT AREA AUTO EXPAND
+var textarea = document.querySelector('textarea.autoexpand');
+
+textarea.addEventListener('keydown', autosize);
+
+function autosize(){
+  var el = this;
+  setTimeout(function(){
+    el.style.cssText = 'height:auto; padding: 1.4rem .2rem .5rem';
+    
+    el.style.cssText = 'height:' + el.scrollHeight + 'px';
+  },0);
+}
+
+
+
+</script>
+
+
+
     <footer class="footer">
         <div class="logo-menu">
             <img class="logo" src="./images/logo.svg" alt="Logo">
